Fix book z-index issue

--- a/src/app/exhibition/book/book.scss
+++ b/src/app/exhibition/book/book.scss
@@ -29,6 +29,7 @@ main{
 			top: 0%;
 			left: 50%;
 			transform-style: preserve-3d;
+			transform: translate3d(0,0,0);
 			perspective: 200rem;
 			&:last-child.flipped{
 				// z-index: 100;
@@ -47,7 +48,7 @@ main{
 			// 	opacity: 0;
 			// }
 			&.flipped{
-				transform: rotateY(-.5turn);
+				transform: rotateY(-179.5deg);
 			}
 			// &.left{
 			// 	transform-origin: right;
@@ -124,7 +125,7 @@ main{
 						img{
 							max-width: 100%;
 							max-height: 100%;
-							transform: translateZ(50px);
+							// transform: translateZ(50px);
 						}
 					}
 					.text-part{
